# mk-world-tools

./: .gitignore  Makefile  README.md  extract_frames.py  mkworld_race_with_plot.ps1  mkworld_ta_lap.ps1  plot_mkworld_rate.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
data/: config.yml
scripts/: auto_recorder.py  battle.py  ta_lap_recorder.py
scripts/8dx/: auto_recorder.py  battle.py
src/OBS/: OBSController.py
src/auto_recorder/: AutoRecorder.py  MK8DXAutoRecorder.py  MK8DXScreenParser.py  ScreenParser.py
src/screen_parser/: MK8DXScreenParser.py  MKWorldScreenParser.py
src/utils/: cv2_util.py  logger.py
tests/: test_lap_timer.py
tests/auto_recorder/: test_MK8DXAutoRecorder.py  test_MK8DXScreenParser.py
tests/screen_parser/: test_MK8DXScreenParser.py  test_MKWorldParser.py
tests/utils/: test_cv2_util.py
tools/: screenshot_script.py  video_urls.txt
