[project]
name = "mk-world-screenshot"
version = "0.1.0"
description = "Takes random screenshots from a Mario Kart World YouTube video."
dependencies = [
    "yt-dlp",
    "opencv-python-headless",
    "ruff>=0.11.6",
    "pillow>=10.4.0",
]
requires-python = ">=3.8"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-mock",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
